fix: amends contrast issues

--- a/chamber/styles/main.css
+++ b/chamber/styles/main.css
@@ -148,8 +148,8 @@ h6 {
   bottom: 2rem;
   right: 2rem;
   padding: 0.75rem 1.5rem;
-  background-color: var(--color-secondary);
-  color: var(--color-white);
+  background-color: var(--color-primary);
+  color: var(--color-black);
   text-decoration: none;
   font-size: 1rem;
   border-radius: 5px;
